# Terminal_Share

./: .gitignore  README.md  pyproject.toml  terminal_share.toml
prompts/: phase_1_0_0_bootstrap.md  phase_1_1_0_chat_channel.md  phase_1_1_1_modal_chat_input.md  phase_1_2_1_pty_chat_color.md  phase_1_2_live_agent_loop.md  phase_1_3_win32_input_parsing.md
terminal_share/: __main__.py  chat_store.py  chat_tools.py  config.py  modal.py  pty_session.py  server.py  tools.py
tests/: smoke_agents.py  smoke_chat.py  smoke_mcp.py  smoke_modal.py  test_chat_store.py  test_chat_tools.py  test_config.py  test_modal.py  test_pty_session.py
